project re-structure

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                 <div class="card-body">
                     <h4>Hi, I'm <span style="color: chocolate;font-weight: 700;">ANDREW CHEMWA</span></h4>
                     <p>just a chill guy who fell in luv with computers.</p>
+                    <p>And, This is my PORTFOLIO.</p>
                 </div>
             </div>
         </div>
