--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
                 <li class="nav-item">
                     <a href="#intro" class="nav-link">CHEMWA'S PORTFOLIO</a>
                 </li>
+            </ul>
+            <ul class="nav justify-content-start">
                 <li class="nav-item">
                     <a href="/" class="nav-link">GITHUB</a>
                 </li>
@@ -42,9 +44,9 @@
         <div class="container-fluid">
             <div class="card" id="intro">
                 <div class="card-body">
-                    <h4>Hi, I'm <span style="color: chocolate;font-weight: 700;">ANDREW CHEMWA</span></h4>
+                    <h4>Hi, I'm ANDREW CHEMWA </h4>
                     <p>just a chill guy who fell in luv with computers.</p>
-                    <p>And, This is my PORTFOLIO.</p>
+                    <p>This is my PORTFOLIO.</p>
                 </div>
             </div>
         </div>
