--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             </ul>
             <ul class="nav justify-content-start">
                 <li class="nav-item">
-                    <a href="/" class="nav-link">GITHUB</a>
+                    <a href="https://github.com/AChemwa" class="nav-link">GITHUB</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/" class="nav-link">INSTAGRAM</a>
+                    <a href="https://instagram.com/chemw_a" class="nav-link">INSTAGRAM</a>
                 </li>
             </ul>
             <ul class="nav justify-content-end">
