--- a/index.html
+++ b/index.html
@@ -15,29 +15,29 @@
         <div class="nav-container container-fluid">
             <ul class="nav justify-content-start">
                 <li class="nav-item">
-                    <a href="#intro" class="nav-link">CHEMWA'S PORTFOLIO</a>
+                    <a href="#intro" class="nav-link"><img src="brilliance.svg"> CHEMWA'S PORTFOLIO</a>
                 </li>
             </ul>
             <ul class="nav justify-content-start">
                 <li class="nav-item">
-                    <a href="https://github.com/AChemwa" class="nav-link">GITHUB</a>
+                    <a href="https://github.com/AChemwa" class="nav-link"><img src="github.svg"> GITHUB</a>
                 </li>
                 <li class="nav-item">
-                    <a href="https://instagram.com/chemw_a" class="nav-link">INSTAGRAM</a>
+                    <a href="https://instagram.com/chemw_a" class="nav-link"><img src="instagram.svg"> INSTAGRAM</a>
                 </li>
             </ul>
             <ul class="nav justify-content-end">
                 <li class="nav-item">
-                    <a class="nav-link" href="#about">ABOUT</a>
+                    <a class="nav-link" href="#about"><img src="file-person.svg"> ABOUT</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#skills">SKILLS</a>
+                    <a class="nav-link" href="#skills"><img src="award.svg"> SKILLS</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#projects">PROJECTS</a>
+                    <a class="nav-link" href="#projects"><img src="clock-history.svg"> PROJECTS</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#summary">SUMMARY</a>
+                    <a class="nav-link" href="#summary"><img src="fire.svg"> SUMMARY</a>
                 </li>
             </ul>
         </div>
