--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="card" id="intro">
                 <div class="card-body">
                     <h4>Hi, I'm ANDREW CHEMWA </h4>
-                    <p>just a chill guy who fell in luv with computers.</p>
+                    <p>just a chill guy</p>
                     <p>This is my PORTFOLIO.</p>
                 </div>
             </div>
